src/test/deca/context/valid/assign-int.deca
// Description:
//    Assign un entier indirectement
//
// Resultats:
//    2
//
// Historique:
//    cree le 06/01/2023

{
    int i;
    i = 2;
}