src/test/deca/context/invalid/assign-string-int.deca
// Description:
//    Assign un int a un string
//
// Resultats:
//    Ligne 12: On ne peut pas assign un int a un string
//
// Historique:
//    cree le 06/01/2023

{
    string i;
    i = 1;
}